# NN-based-grasping

./: README
gazebo_mimic/: CMakeLists.txt
gazebo_mimic/include/gazebo_mimic_plugin/: mimic_plugin.h
yumi_control/config/: position_controllers.yaml  traj_controllers.yaml
yumi_description/urdf/: yumi.urdf
yumi_description/urdf/Gazebo/: gazebo.urdf.xacro
yumi_launch/launch/: test  yumi_gazebo_pos_control.launch  yumi_gazebo_traj_pos_control.launch  yumi_gazebo_vel_control.launch
yumi_launch/worlds/: my_world.world
yumi_moveit_config/config/: controllers.yaml  joint_names.yaml
yumi_moveit_config/launch/: demo_planning_excution.launch
yumi_test_controllers/: CMakeLists.txt
yumi_test_controllers/scripts/: camera  test_moveit.py  yumipy.py
yumi_test_controllers/src/: test_traj_pos_control  test_traj_vel_control.cpp
